---
source: polychem/src/atoms/atomic_database.rs
description: res
expression: out
---
  × error parsing KDL

Error:   × no type for Decimal, found pi
   ╭─[test:1:10]
 1 │ lossless (pi)3.14
   ·          ──┬─
   ·            ╰── unexpected type name
   ╰────
